[Fix] gap 사이즈 수정 #41

--- a/public/user/css/my-page/my-page.css
+++ b/public/user/css/my-page/my-page.css
@@ -47,7 +47,7 @@
     flex-direction: row;
     align-items: center;
     padding: 0 clamp(9.6px, 3.2vw + 12px, 16px);
-    gap: clamp(9.6px, 3.2vw, 16px);
+    gap: clamp(12.4px, 4.8vw - 2px, 22px);
 }
 
 #my #myPage .mypage-info-container .mypage-info-goal-wrapper .mypage-info-wrapper .profile-image {
